# pthone-number-validator

./: .gitignore  pyproject.toml
pthone_number_validator/: validator.py
tests/: test_validator.py
