[tool.poetry]
name = "pthone-number-validator"
version = "0.1.0"
description = ""
authors = ["Carlos Alberto Baltazar Hinojosa <carval.17080998@outlook.es>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.1.2"
requests-mock = "^1.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
